[project]
name = "research-paper-rag"
version = "0.1.0"
description = "RAG agent over arXiv papers — HuggingFace + Qdrant stack"
requires-python = ">=3.11"
dependencies = [
    # HuggingFace
    "huggingface-hub==1.17.0",
    "langchain-huggingface==1.2.2",
    "sentence-transformers==5.5.1",
    # LangChain
    "langchain==1.3.2",
    "langchain-community==0.4.2",
    "langchain-qdrant==1.1.0",
    # Vector DB
    "qdrant-client==1.18.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # PDF + ingestion
    "pymupdf==1.27.2.3",
    "arxiv==4.0.0",
    "tiktoken==0.13.0",
    # UI
    "gradio==6.15.2",
    # Evals
    "ragas>=0.1.0",
    "langsmith>=0.1.0",
    "datasets>=2.0.0",
    # Utilities
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",       # FastAPI TestClient
    "ruff>=0.4.0",         # linter + formatter
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle, pyflakes, isort

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"